feat(team): add invitation revoke and search
